k8/base/angular-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-ui
spec:
  selector:
    app: angular-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
